# gh-600-preparation

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: cross_domain.md  curriculum.md  gap_report.md  index.md  mock_exam.md  mock_exam_1.md  mock_exam_2.md  mock_exam_3.md  mock_exam_4.md  mock_exam_5.md  mock_exam_6.md  questions.md  quick_reference.md  readiness.md  revision.md  study_notes.md
docs/curriculum/: index.md
docs/gap-analysis/: index.md
docs/mock-exam/: index.md
docs/questions/: index.md
docs/readiness/: index.md
docs/revision/: index.md
docs/study-notes/: index.md
src/: __init__.py  config.py  pipeline.py
src/models/: __init__.py  curriculum.py  gap_analysis.py  knowledge.py  mock_exam.py  questions.py  readiness.py  revision.py  scoring.py  study_notes.py  topic_map.py
src/phases/: phase01_extractor.py  phase02_mapper.py  phase03_analyzer.py  phase04_notes.py  phase05_curriculum.py  phase06_revision.py  phase07_questions.py  phase08_mock_exam.py  phase09_gap.py  phase10_readiness.py
src/rendering/: __init__.py  renderer.py
src/utils/: __init__.py  dedup.py  logging.py  scraper.py
tests/integration/: test_full_pipeline.py
tests/property/: test_prop_analyzer.py  test_prop_curriculum.py  test_prop_extractor.py  test_prop_gap_analyzer.py  test_prop_mapper.py  test_prop_mock_exam.py  test_prop_notes.py  test_prop_questions.py  test_prop_readiness.py  test_prop_rendering.py  test_prop_revision.py  test_prop_static_site.py
tests/unit/: test_dedup.py  test_phase01_extractor.py  test_pipeline.py  (+7 more)
(+16 files in other folders)
