[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-600-exam-prep"
version = "0.1.0"
description = "Comprehensive exam preparation package generator for the GitHub Certified Agentic AI Developer (GH-600) certification"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "pydantic>=2.7.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.1",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.8.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.35.0",
]

[project.scripts]
gh600-prep = "src.pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
